Funcionalidad de registrar y errores